# readylist

./: LICENSE.md  README.md  pyproject.toml
src/js/: .UI.MD.kate-swp  .graphui.html.kate-swp  .ui.html.kate-swp  graphui.html
src/readylist/: cli.py  core.py  example.py
tests/: .test_core.py.kate-swp  test_core.py
